Refactor: 版本升級 Node.js -> 24 React -> 18 Gatsby -> 5 及其附屬之套件

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,9 +3,8 @@
 layer(utilities);
 
 @theme {
-  --font-*: initial;
   --font-serif:
-    Noto Serif TC, ui-serif, Georgia, Cambria, Times New Roman, Times, serif;
+    "Noto Serif TC", ui-serif, Georgia, Cambria, Times New Roman, Times, serif;
 
   --color-transparent: transparent;
   --color-current: currentColor;
